--- a/classes/cluster/k8s-salt-model/kubernetes/compute.yml
+++ b/classes/cluster/k8s-salt-model/kubernetes/compute.yml
@@ -2,6 +2,7 @@ classes:
 - system.linux.system.repo.docker
 - system.kubernetes.pool.cluster
 - system.salt.minion.cert.k8s_client
+- system.salt.minion.cert.etcd_server
 #- system.bird.server.single
 - cluster.k8s-salt-model
 parameters:
