enable certs for etcd

--- a/classes/cluster/k8s-salt-model/kubernetes/control.yml
+++ b/classes/cluster/k8s-salt-model/kubernetes/control.yml
@@ -13,6 +13,7 @@ parameters:
     keepalived_vip_virtual_router_id: 60
   etcd:
     server:
+      certs: true
       setup:
         calico:
           key: /calico/v1/ipam/v4/pool/${_param:calico_private_network}-${_param:calico_private_netmask}
